add testing barcode csv in main.nf.test

--- a/modules/nf-core/anndata/barcodes/meta.yml
+++ b/modules/nf-core/anndata/barcodes/meta.yml
@@ -1,7 +1,9 @@
 name: anndata_barcodes
 description: Module to append droplet barcodes to the AnnData file
 authors:
-  - "Nico Trummer <nictru32@gmail.com>"
+  - "@nictru"
+maintainers:
+  - "@nictru"
 keywords:
   - single-cell
   - scRNA-seqq
