--- a/modules/nf-core/pbsv/discover/meta.yml
+++ b/modules/nf-core/pbsv/discover/meta.yml
@@ -26,8 +26,8 @@ input:
   - - meta2:
         type: map
         description: |
-          Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
+          Groovy Map containing reference information
+          e.g. `[ id:'reference' ]`
     - fasta:
         type: file
         description: fasta file
