--- a/modules/nf-core/pbsv/discover/meta.yml
+++ b/modules/nf-core/pbsv/discover/meta.yml
@@ -2,9 +2,9 @@
 name: "pbsv_discover"
 description: "pbsv - PacBio structural variant (SV) signature discovery tool"
 keywords:
-  - sort
-  - example
-  - genomics
+  - variant
+  - pacbio
+  - structural
 tools:
   - "pbsv":
       description: "pbsv - PacBio structural variant (SV) calling and analysis tools"
