fixing the meta to match update

--- a/modules/nf-core/pbmm2/align/meta.yml
+++ b/modules/nf-core/pbmm2/align/meta.yml
@@ -24,7 +24,7 @@ input:
         type: file
         description: Sorted BAM/CRAM/SAM file
         pattern: "*.{bam,cram,sam}"
-  - - meta:
+  - - meta2:
         type: map
         description: |
           Groovy Map containing sample information
