parabricks/applybqsr version updated and tests migrated to pytest

--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -25,6 +25,9 @@ if ("$PROFILE" == "singularity") {
     podman.enabled = true
     podman.userEmulation = true
     podman.runOptions = "--runtime crun --platform linux/x86_64 --systemd=always"
+} else if ("$PROFILE" == "gpu") {
+    docker.runOptions = "--gpus all"
+    singularity.runOptions = "--nv"
 } else {
     docker.enabled = true
     docker.userEmulation = false
