--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -32,6 +32,10 @@ profiles {
         docker.enabled = true
         docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
     }
+    gpu {
+        docker.runOptions = "--gpus all"
+        singularity.runOptions = "--nv"
+    }
     docker_self_hosted {
         docker.enabled = true
         docker.fixOwnership = true
