parabricks/applybqsr version updated and tests migrated to pytest

--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -26,8 +26,10 @@ if ("$PROFILE" == "singularity") {
     podman.userEmulation = true
     podman.runOptions = "--runtime crun --platform linux/x86_64 --systemd=always"
 } else if ("$PROFILE" == "gpu") {
-    docker.runOptions = "--gpus all"
-    singularity.runOptions = "--nv"
+    docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0'
+    apptainer.runOptions    = '--no-mount tmp --writable-tmpfs --nv'
+    singularity.runOptions  = '--no-mount tmp --writable-tmpfs --nv'
+    use_gpu                 = true
 } else {
     docker.enabled = true
     docker.userEmulation = false
