--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -33,8 +33,10 @@ profiles {
         docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
     }
     gpu {
-        docker.runOptions = "--gpus all"
-        singularity.runOptions = "--nv"
+        docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0'
+        apptainer.runOptions    = '--no-mount tmp --writable-tmpfs --nv'
+        singularity.runOptions  = '--no-mount tmp --writable-tmpfs --nv'
+        use_gpu                 = true
     }
     docker_self_hosted {
         docker.enabled = true
