--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -779,6 +779,8 @@ jobs:
         profile: [conda, docker_self_hosted, singularity]
         include:
           - path: modules/nf-core/parabricks/applybqsr
+          - path: modules/nf-core/parabricks/fq2bam
+          - path: modules/nf-core/parabricks/fq2bammeth
     env:
       NXF_ANSI_LOG: false
       NFTEST_VER: "0.9.0"
