remove parabricks from normal nf-test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -662,6 +662,7 @@ jobs:
             path: subworkflows/nf-core/fasta_newick_epang_gappa
           - profile: conda
             tags: parabricks/applybqsr
+          - path: modules/nf-core/parabricks/
     env:
       NXF_ANSI_LOG: false
       NFTEST_VER: "0.9.0"
