Fixed meta to be consistent with main

--- a/modules/nf-core/coptr/index/meta.yml
+++ b/modules/nf-core/coptr/index/meta.yml
@@ -28,11 +28,11 @@ input:
           - edam: "http://edamontology.org/format_1929"
 
 output:
-  - genome:
+  - index:
       - meta:
           type: map
           description: name of the reference genome index
-      - '*.genomes" ':
+      - 'bowtie2':
           type: map
           description: index genome
           ontologies:
