--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -551,6 +551,8 @@ jobs:
           - profile: conda
             path: modules/nf-core/deepvariant/vcfstatsreport
           - profile: conda
+            path: modules/nf-core/doubletdetection
+          - profile: conda
             path: modules/nf-core/ensemblvep/vep
           - profile: conda
             path: modules/nf-core/fastk/fastk
