--- a/modules/nf-core/gunc/run/meta.yml
+++ b/modules/nf-core/gunc/run/meta.yml
@@ -22,7 +22,7 @@ input:
         description: |
           Groovy Map containing sample information
           e.g. [ id:'test', single_end:false ]
-    - fasta:
+    - fasta_files:
         type: file
         description: FASTA file containing contig (bins)
         pattern: "*.fa"
