--- a/modules/nf-core/anndata/barcodes/environment.yml
+++ b/modules/nf-core/anndata/barcodes/environment.yml
@@ -2,4 +2,6 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - conda-forge::Python=3.12.3
   - conda-forge::anndata=0.10.7
+  - conda-forge::pandas=2.2.2
