Put more descriptive description

--- a/modules/nf-core/coptr/index/meta.yml
+++ b/modules/nf-core/coptr/index/meta.yml
@@ -23,7 +23,7 @@ input:
         Groovy Map containing genome information
     - indexfasta:
         type: file
-        description: Fasta file(s) ending in [.fasta, .fna, .fa]
+        description: Fasta file(s) ending in [.fasta, .fna, .fa] to be used to create the index.
         pattern: "*.{.fasta,.fna,.fa}"
         ontologies:
           - edam: "http://edamontology.org/format_1929"
