--- a/modules/nf-core/coptr/index/meta.yml
+++ b/modules/nf-core/coptr/index/meta.yml
@@ -29,7 +29,7 @@ input:
           - edam: "http://edamontology.org/format_1929"
 
 output:
-  - index:
+  - index_dir:
       - meta:
           type: map
           description: |
