--- a/modules/nf-core/custom/filterdifferentialtable/meta.yml
+++ b/modules/nf-core/custom/filterdifferentialtable/meta.yml
@@ -1,58 +1,56 @@
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "custom_filterdifferentialtable"
-## TODO nf-core: Add a description of the module and list keywords
-description: write your description here
+name: custom_filterdifferentialtable
+description: Filters a differential expression table based on logFC and adjusted p-value thresholds
 keywords:
-  - sort
-  - example
-  - genomics
+  - filter
+  - differential expression
+  - logFC
+  - p-value
 tools:
-  - "custom":
-      ## TODO nf-core: Add a description and other details for the software below
-      description: ""
-      homepage: ""
-      documentation: ""
-      tool_dev_url: ""
-      doi: ""
-      licence: 
-      identifier: 
+  - pandas:
+      description: Python library for data manipulation and analysis
+      homepage: https://pandas.pydata.org/
+      documentation: https://pandas.pydata.org/docs/
+      tool_dev_url: https://github.com/pandas-dev/pandas
+      doi: "10.5281/zenodo.3509134"
+      licence: ["BSD-3-Clause"]
 
-## TODO nf-core: Add a description of all of the variables used as input
 input:
-  #
-  ## TODO nf-core: Delete / customise this example input
-    - bam:
-        type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+  - meta:
+      type: map
+      description: |
+        Groovy Map containing sample information
+        e.g. [ id:'test', single_end:false ]
+  - input_file:
+      type: file
+      description: Input differential expression table (CSV, TSV, or TXT format)
+      pattern: "*.{csv,tsv,txt}"
+  - logFC_column:
+      type: string
+      description: Name of the column containing log fold change values
+  - FC_threshold:
+      type: number
+      description: Fold change threshold for filtering
+  - padj_column:
+      type: string
+      description: Name of the column containing adjusted p-values
+  - padj_threshold:
+      type: number
+      description: Adjusted p-value threshold for filtering
 
-## TODO nf-core: Add a description of all of the variables used as output
 output:
-  - bam:
-  #
-  ## TODO nf-core: Delete / customise this example output
-    - "*.bam":
-        type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+  - meta:
+      type: map
+      description: |
+        Groovy Map containing sample information
+        e.g. [ id:'test', single_end:false ]
+  - filtered:
+      type: file
+      description: Filtered differential expression table
+      pattern: "*_filtered.tsv"
   - versions:
-    - "versions.yml":
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
+      type: file
+      description: File containing software versions
+      pattern: "versions.yml"
 
 authors:
-  - "@pinin4fjords"
-maintainers:
   - "@pinin4fjords"
