--- a/modules/nf-core/custom/filterdifferentialtable/meta.yml
+++ b/modules/nf-core/custom/filterdifferentialtable/meta.yml
@@ -1,4 +1,4 @@
-name: custom_filterdifferentialtable
+name: "custom_filterdifferentialtable"
 description: Filters a differential expression table based on logFC and adjusted p-value thresholds
 keywords:
   - filter
@@ -6,51 +6,57 @@ keywords:
   - logFC
   - p-value
 tools:
-  - pandas:
-      description: Python library for data manipulation and analysis
-      homepage: https://pandas.pydata.org/
-      documentation: https://pandas.pydata.org/docs/
-      tool_dev_url: https://github.com/pandas-dev/pandas
+  - "pandas":
+      description: "Python library for data manipulation and analysis"
+      homepage: "https://pandas.pydata.org/"
+      documentation: "https://pandas.pydata.org/docs/"
+      tool_dev_url: "https://github.com/pandas-dev/pandas"
       doi: "10.5281/zenodo.3509134"
       licence: ["BSD-3-Clause"]
-
+      identifier: "pypi:pandas"
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
-  - input_file:
-      type: file
-      description: Input differential expression table (CSV, TSV, or TXT format)
-      pattern: "*.{csv,tsv,txt}"
-  - logFC_column:
-      type: string
-      description: Name of the column containing log fold change values
-  - FC_threshold:
-      type: number
-      description: Fold change threshold for filtering
-  - padj_column:
-      type: string
-      description: Name of the column containing adjusted p-values
-  - padj_threshold:
-      type: number
-      description: Adjusted p-value threshold for filtering
-
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - input_file:
+        type: file
+        description: Input differential expression table (CSV, TSV, or TXT format)
+        pattern: "*.{csv,tsv,txt}"
+  - - meta2:
+        type: map
+        description: |
+          Groovy Map containing filtering parameters
+    - logFC_column:
+        type: string
+        description: Name of the column containing log fold change values
+    - FC_threshold:
+        type: number
+        description: Fold change threshold for filtering
+    - padj_column:
+        type: string
+        description: Name of the column containing adjusted p-values
+    - padj_threshold:
+        type: number
+        description: Adjusted p-value threshold for filtering
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
   - filtered:
-      type: file
-      description: Filtered differential expression table
-      pattern: "*_filtered.tsv"
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+      - "*.filtered.tsv":
+          type: file
+          description: Filtered differential expression table
+          pattern: "*_filtered.tsv"
   - versions:
-      type: file
-      description: File containing software versions
-      pattern: "versions.yml"
-
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
+  - "@pinin4fjords"
+maintainers:
   - "@pinin4fjords"
