--- a/modules/nf-core/custom/filterdifferentialtable/meta.yml
+++ b/modules/nf-core/custom/filterdifferentialtable/meta.yml
@@ -56,5 +56,7 @@ output:
           pattern: "versions.yml"
 authors:
   - "@pinin4fjords"
+  - "@WackerO"
 maintainers:
   - "@pinin4fjords"
+  - "@WackerO"
