--- a/modules/nf-core/gatk4/createreadcountpanelofnormals/tests/nextflow.config
+++ b/modules/nf-core/gatk4/createreadcountpanelofnormals/tests/nextflow.config
@@ -1,3 +1,4 @@
+docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64 -e "HOME=${HOME}" -v /etc/passwd:/etc/passwd:ro -v /etc/shadow:/etc/shadow:ro -v /etc/group:/etc/group:ro -v $HOME:$HOME'
 process {
 
     publishDir = { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" }
