--- a/modules/nf-core/metamdbg/asm/meta.yml
+++ b/modules/nf-core/metamdbg/asm/meta.yml
@@ -42,7 +42,7 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. `[ id:'sample1', single_end:false ]`
-      - "contigs.fasta.gz":
+      - "*.contigs.fasta.gz":
           type: file
           description: |
             Gzipped fasta file containing the assembled contigs from the input
@@ -53,7 +53,7 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. `[ id:'sample1', single_end:false ]`
-      - "metaMDBG.log":
+      - "*.metaMDBG.log":
           type: file
           description: Log file describing the metaMDBG run.
   - versions:
