add ssh-tunnel back

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -848,6 +848,8 @@ jobs:
         run: |
           nextflow secrets set SENTIEON_AUTH_DATA $(python3 tests/modules/nf-core/sentieon/license_message.py encrypt --key "${{ secrets.SENTIEON_ENCRYPTION_KEY }}" --message "${{ secrets.SENTIEON_LICENSE_MESSAGE }}")
       # FIXME docker debugging
+      - name: ssh debugging
+        uses: Warpbuilds/action-debugger@v1.3
       - name: Verify Docker Environment
         run: |
           echo "Current user: $(whoami)"
